# Causal-Timeseries

./: .gitignore  LICENSE  PROJECT_COMPLETE.md  README.md  SETUP_INSTRUCTIONS.md  cross_validation.py  detect_causality.py  discover_dag.py  download_data.py  evaluate_models.py  generate_visualizations.py  pyproject.toml  requirements.txt  setup.py  train_models.py  var_baseline.py
.github/workflows/: ci.yml
assets/: .gitkeep
causal_timeseries/: __init__.py
causal_timeseries/causal_discovery/: __init__.py  dag_utils.py  notears.py
causal_timeseries/data/: __init__.py  dataset.py  downloaders.py  preprocessor.py
causal_timeseries/evaluation/: __init__.py  metrics.py
causal_timeseries/models/: __init__.py  granger_neural.py  tcn.py
data/: README.md
data/processed/: .gitkeep
data/raw/: .gitkeep
examples/: quick_start.py
experiments/configs/: attention_granger.yaml  baseline.yaml  lstm_granger.yaml
experiments/results/: causal_edges.json  causality_matrix.csv  causality_summary.json  comprehensive_metrics.csv  evaluation_summary.json  model_comparison.csv  model_ranking.csv  notears_adjacency.csv  notears_dag.json  notears_weights.csv  statistical_comparison.csv  training_config.json  var_baseline_results.json  var_granger_causality.json  var_neural_comparison.csv
experiments/results/graphs/: .gitkeep
experiments/results/model_outputs/: .gitkeep
notebooks/: .gitkeep
scripts/: download_sample_data.py
src/: __init__.py
src/causal_discovery/: __init__.py
src/data/: __init__.py  data_loader.py  preprocessor.py  time_series_generator.py
src/models/: __init__.py  attention_granger.py  granger_classical.py  tcn_granger.py
src/utils/: __init__.py  config.py  logger.py  torch_utils.py
tests/: conftest.py  test_all.py
